# telekinesis

task1_dynamic_memory_management/: CMakeLists.txt
task1_dynamic_memory_management/headers/: dmm.hpp
task1_dynamic_memory_management/src/: dmm.cpp  main.cpp
task2_vector/: CMakeLists.txt
task2_vector/headers/: vector.hpp
task2_vector/src/: main.cpp  vector.cpp
